p2p/core/include/foretias_core.h

/* ── Version ────────────────────────────────────── */
#define FORETIAS_CORE_VERSION_MAJOR 0
#define FORETIAS_CORE_VERSION_MINOR 1
typedef struct {
    int         major;
    int         minor;
    const char* build_hash;    /* populated by build.rs / CMake */
} ForetiasCoreVersion;
ForetiasCoreVersion foretias_core_version(void);
/* ── Result codes ───────────────────────────────── */
typedef enum {
    FORETIAS_OK                 =  0,
    FORETIAS_ERR_BAD_SIG        = -1,
    FORETIAS_ERR_BAD_PROOF      = -2,
    FORETIAS_ERR_BAD_KEY        = -3,
    FORETIAS_ERR_STALE          = -4,
    FORETIAS_ERR_REPLAY         = -5,
    FORETIAS_ERR_BAD_INPUT      = -6,
    FORETIAS_ERR_OVERFLOW       = -7,
    FORETIAS_ERR_UNSUPPORTED    = -8,
    FORETIAS_ERR_INTERNAL       = -99,
} ForetiasResult;
/* ── Curve selector ─────────────────────────────── */
typedef enum {
    FORETIAS_CURVE_ED25519 = 1,
    FORETIAS_CURVE_P256    = 2,
} ForetiasCurve;
/* ── Key / signature types ──────────────────────── */
typedef struct { uint8_t bytes[32]; } ForetiasPubKey32;   /* Ed25519 pub, P-256 X */
typedef struct { uint8_t bytes[33]; } ForetiasPubKey33;   /* P-256 compressed    */
typedef struct { uint8_t bytes[32]; } ForetiasPrivKey32;  /* Ed25519 seed / P256 scalar */
typedef struct { uint8_t bytes[32]; } ForetiasPeerID;
typedef struct { uint8_t bytes[64]; } ForetiasSig64;      /* Ed25519 / P-256 ECDSA */
typedef struct { uint8_t bytes[32]; } ForetiasHash32;
typedef struct { uint8_t bytes[16]; } ForetiasHash16;     /* MD5 legacy          */
typedef struct { uint8_t bytes[20]; } ForetiasHash20;     /* SHA-1 legacy        */
typedef struct { uint8_t bytes[32]; } ForetiasNullifier;
typedef struct { uint8_t bytes[32]; } ForetiasFrostShare;
/* ── Identity (Ed25519) ─────────────────────────── */
ForetiasResult foretias_ed25519_generate_keypair(
    ForetiasPubKey32*  pub_out,
    ForetiasPrivKey32* priv_out
);
ForetiasResult foretias_ed25519_derive_peer_id(
    const ForetiasPubKey32* pub,
    ForetiasPeerID*         id_out
);
ForetiasResult foretias_ed25519_sign(
    const ForetiasPrivKey32* priv,
    const uint8_t*          msg,
    size_t                  msg_len,
    ForetiasSig64*           sig_out
);
ForetiasResult foretias_ed25519_verify(
    const ForetiasPubKey32*  pub,
    const uint8_t*          msg,
    size_t                  msg_len,
    const ForetiasSig64*     sig
);
/* ── Identity (P-256) ───────────────────────────── */
ForetiasResult foretias_p256_generate_keypair(
    ForetiasPubKey33*  pub_out,
    ForetiasPrivKey32* priv_out
);
ForetiasResult foretias_p256_derive_peer_id(
    const ForetiasPubKey33* pub,
    ForetiasPeerID*         id_out
);
ForetiasResult foretias_p256_sign(
    const ForetiasPrivKey32* priv,
    const uint8_t*          msg,
    size_t                  msg_len,
    ForetiasSig64*           sig_out
);
ForetiasResult foretias_p256_verify(
    const ForetiasPubKey33*  pub,
    const uint8_t*          msg,
    size_t                  msg_len,
    const ForetiasSig64*     sig
);
/* ── Hashing — secure ───────────────────────────── */
ForetiasResult foretias_hash_sha256(
    const uint8_t* data,
    size_t         len,
    ForetiasHash32* out
);
ForetiasResult foretias_hash_sha256_concat(
    const uint8_t* a, size_t a_len,
    const uint8_t* b, size_t b_len,
    ForetiasHash32* out
);
ForetiasResult foretias_hash_blake3(
    const uint8_t* data,
    size_t         len,
    ForetiasHash32* out
);
/* ── Hashing — legacy / insecure (NONCRYPTO USE ONLY) ─ */
/* @human: names deliberately verbose to prevent accidental
   security use. Callers that see these names must have a
   non-security reason (file checksums, protocol interop). */

ForetiasResult foretias_hash_legacy_insecure_md5(
    const uint8_t* data,
    size_t         len,
    ForetiasHash16* out
);
ForetiasResult foretias_hash_legacy_insecure_sha1(
    const uint8_t* data,
    size_t         len,
    ForetiasHash20* out
);
/* ── Noise_XX handshake ─────────────────────────── */
#define FORETIAS_NOISE_MAX_MSG 65535
typedef struct {
    uint8_t  chaining_key[32];
    uint8_t  handshake_hash[32];
    uint8_t  local_static_priv[32];
    uint8_t  local_static_pub[32];
    uint8_t  local_ephemeral[32];
    uint8_t  remote_ephemeral[32];
    uint8_t  remote_static[32];
    uint8_t  send_key[32];
    uint8_t  recv_key[32];
    uint64_t send_nonce;
    uint64_t recv_nonce;
    int32_t  step;
    int32_t  is_initiator;
    int32_t  handshake_complete;
    int32_t  curve;                /* ForetiasCurve */
    uint8_t  _pad[4];
} ForetiasNoiseState;
/* ── Sparse Merkle ──────────────────────────────── */
#define FORETIAS_MERKLE_MAX_DEPTH 32