p2p/core-engine/src/core/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const FORETIAS_CORE_VERSION_MAJOR: u32 = 0;
pub const FORETIAS_CORE_VERSION_MINOR: u32 = 1;
pub const FORETIAS_NOISE_MAX_MSG: u32 = 65535;
pub const FORETIAS_MERKLE_MAX_DEPTH: u32 = 32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasCoreVersion {
    pub major: ::std::os::raw::c_int,
    pub minor: ::std::os::raw::c_int,
    pub build_hash: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasCoreVersion"][::std::mem::size_of::<ForetiasCoreVersion>() - 16usize];
    ["Alignment of ForetiasCoreVersion"][::std::mem::align_of::<ForetiasCoreVersion>() - 8usize];
    ["Offset of field: ForetiasCoreVersion::major"]
        [::std::mem::offset_of!(ForetiasCoreVersion, major) - 0usize];
    ["Offset of field: ForetiasCoreVersion::minor"]
        [::std::mem::offset_of!(ForetiasCoreVersion, minor) - 4usize];
    ["Offset of field: ForetiasCoreVersion::build_hash"]
        [::std::mem::offset_of!(ForetiasCoreVersion, build_hash) - 8usize];
};
extern "C" {
    #[link_name = "foretias_core_version"]
    pub fn foretias_core_version() -> ForetiasCoreVersion;
}
pub const ForetiasResult_FORETIAS_OK: ForetiasResult = 0;
pub const ForetiasResult_FORETIAS_ERR_BAD_SIG: ForetiasResult = -1;
pub const ForetiasResult_FORETIAS_ERR_BAD_PROOF: ForetiasResult = -2;
pub const ForetiasResult_FORETIAS_ERR_BAD_KEY: ForetiasResult = -3;
pub const ForetiasResult_FORETIAS_ERR_STALE: ForetiasResult = -4;
pub const ForetiasResult_FORETIAS_ERR_REPLAY: ForetiasResult = -5;
pub const ForetiasResult_FORETIAS_ERR_BAD_INPUT: ForetiasResult = -6;
pub const ForetiasResult_FORETIAS_ERR_OVERFLOW: ForetiasResult = -7;
pub const ForetiasResult_FORETIAS_ERR_UNSUPPORTED: ForetiasResult = -8;
pub const ForetiasResult_FORETIAS_ERR_INTERNAL: ForetiasResult = -99;
pub type ForetiasResult = ::std::os::raw::c_int;
pub const ForetiasCurve_FORETIAS_CURVE_ED25519: ForetiasCurve = 1;
pub const ForetiasCurve_FORETIAS_CURVE_P256: ForetiasCurve = 2;
pub type ForetiasCurve = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasPubKey32 {
    pub bytes: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasPubKey32"][::std::mem::size_of::<ForetiasPubKey32>() - 32usize];
    ["Alignment of ForetiasPubKey32"][::std::mem::align_of::<ForetiasPubKey32>() - 1usize];
    ["Offset of field: ForetiasPubKey32::bytes"]
        [::std::mem::offset_of!(ForetiasPubKey32, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasPubKey33 {
    pub bytes: [u8; 33usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasPubKey33"][::std::mem::size_of::<ForetiasPubKey33>() - 33usize];
    ["Alignment of ForetiasPubKey33"][::std::mem::align_of::<ForetiasPubKey33>() - 1usize];
    ["Offset of field: ForetiasPubKey33::bytes"]
        [::std::mem::offset_of!(ForetiasPubKey33, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasPrivKey32 {
    pub bytes: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasPrivKey32"][::std::mem::size_of::<ForetiasPrivKey32>() - 32usize];
    ["Alignment of ForetiasPrivKey32"][::std::mem::align_of::<ForetiasPrivKey32>() - 1usize];
    ["Offset of field: ForetiasPrivKey32::bytes"]
        [::std::mem::offset_of!(ForetiasPrivKey32, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasPeerID {
    pub bytes: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasPeerID"][::std::mem::size_of::<ForetiasPeerID>() - 32usize];
    ["Alignment of ForetiasPeerID"][::std::mem::align_of::<ForetiasPeerID>() - 1usize];
    ["Offset of field: ForetiasPeerID::bytes"]
        [::std::mem::offset_of!(ForetiasPeerID, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasSig64 {
    pub bytes: [u8; 64usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasSig64"][::std::mem::size_of::<ForetiasSig64>() - 64usize];
    ["Alignment of ForetiasSig64"][::std::mem::align_of::<ForetiasSig64>() - 1usize];
    ["Offset of field: ForetiasSig64::bytes"]
        [::std::mem::offset_of!(ForetiasSig64, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasHash32 {
    pub bytes: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasHash32"][::std::mem::size_of::<ForetiasHash32>() - 32usize];
    ["Alignment of ForetiasHash32"][::std::mem::align_of::<ForetiasHash32>() - 1usize];
    ["Offset of field: ForetiasHash32::bytes"]
        [::std::mem::offset_of!(ForetiasHash32, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasHash16 {
    pub bytes: [u8; 16usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasHash16"][::std::mem::size_of::<ForetiasHash16>() - 16usize];
    ["Alignment of ForetiasHash16"][::std::mem::align_of::<ForetiasHash16>() - 1usize];
    ["Offset of field: ForetiasHash16::bytes"]
        [::std::mem::offset_of!(ForetiasHash16, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasHash20 {
    pub bytes: [u8; 20usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasHash20"][::std::mem::size_of::<ForetiasHash20>() - 20usize];
    ["Alignment of ForetiasHash20"][::std::mem::align_of::<ForetiasHash20>() - 1usize];
    ["Offset of field: ForetiasHash20::bytes"]
        [::std::mem::offset_of!(ForetiasHash20, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasNullifier {
    pub bytes: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasNullifier"][::std::mem::size_of::<ForetiasNullifier>() - 32usize];
    ["Alignment of ForetiasNullifier"][::std::mem::align_of::<ForetiasNullifier>() - 1usize];
    ["Offset of field: ForetiasNullifier::bytes"]
        [::std::mem::offset_of!(ForetiasNullifier, bytes) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasFrostShare {
    pub bytes: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasFrostShare"][::std::mem::size_of::<ForetiasFrostShare>() - 32usize];
    ["Alignment of ForetiasFrostShare"][::std::mem::align_of::<ForetiasFrostShare>() - 1usize];
    ["Offset of field: ForetiasFrostShare::bytes"]
        [::std::mem::offset_of!(ForetiasFrostShare, bytes) - 0usize];
};
extern "C" {
    #[link_name = "foretias_ed25519_generate_keypair"]
    pub fn foretias_ed25519_generate_keypair(        pub_out: *mut ForetiasPubKey32,        priv_out: *mut ForetiasPrivKey32,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_ed25519_derive_peer_id"]
    pub fn foretias_ed25519_derive_peer_id(        pub_: *const ForetiasPubKey32,        id_out: *mut ForetiasPeerID,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_ed25519_sign"]
    pub fn foretias_ed25519_sign(        priv_: *const ForetiasPrivKey32,        msg: *const u8,        msg_len: usize,        sig_out: *mut ForetiasSig64,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_ed25519_verify"]
    pub fn foretias_ed25519_verify(        pub_: *const ForetiasPubKey32,        msg: *const u8,        msg_len: usize,        sig: *const ForetiasSig64,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_p256_generate_keypair"]
    pub fn foretias_p256_generate_keypair(        pub_out: *mut ForetiasPubKey33,        priv_out: *mut ForetiasPrivKey32,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_p256_derive_peer_id"]
    pub fn foretias_p256_derive_peer_id(        pub_: *const ForetiasPubKey33,        id_out: *mut ForetiasPeerID,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_p256_sign"]
    pub fn foretias_p256_sign(        priv_: *const ForetiasPrivKey32,        msg: *const u8,        msg_len: usize,        sig_out: *mut ForetiasSig64,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_p256_verify"]
    pub fn foretias_p256_verify(        pub_: *const ForetiasPubKey33,        msg: *const u8,        msg_len: usize,        sig: *const ForetiasSig64,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_hash_sha256"]
    pub fn foretias_hash_sha256(        data: *const u8,        len: usize,        out: *mut ForetiasHash32,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_hash_sha256_concat"]
    pub fn foretias_hash_sha256_concat(        a: *const u8,        a_len: usize,        b: *const u8,        b_len: usize,        out: *mut ForetiasHash32,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_hash_blake3"]
    pub fn foretias_hash_blake3(        data: *const u8,        len: usize,        out: *mut ForetiasHash32,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_hash_legacy_insecure_md5"]
    pub fn foretias_hash_legacy_insecure_md5(        data: *const u8,        len: usize,        out: *mut ForetiasHash16,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_hash_legacy_insecure_sha1"]
    pub fn foretias_hash_legacy_insecure_sha1(        data: *const u8,        len: usize,        out: *mut ForetiasHash20,    ) -> ForetiasResult;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasNoiseState {
    pub chaining_key: [u8; 32usize],
    pub handshake_hash: [u8; 32usize],
    pub local_static_priv: [u8; 32usize],
    pub local_static_pub: [u8; 32usize],
    pub local_ephemeral: [u8; 32usize],
    pub remote_ephemeral: [u8; 32usize],
    pub remote_static: [u8; 32usize],
    pub send_key: [u8; 32usize],
    pub recv_key: [u8; 32usize],
    pub send_nonce: u64,
    pub recv_nonce: u64,
    pub step: i32,
    pub is_initiator: i32,
    pub handshake_complete: i32,
    pub curve: i32,
    pub _pad: [u8; 4usize],
}
